--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,180 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primaryK: #72D3D3;
+  --secondaryK: #BB5C7C;
+  --blackK: #151515;
+  --blueK: #0D8DD2;
+}
+body{
+  background-color: #9BD9D9 !important;
+}
+.bg-sea{
+  background-color: #9BD9D9 !important;
+}
+.bg-pink{
+  background-color: var(--secondaryK) !important;
+}
+h1,h2,h3,h4,h5,h6,p{
+  margin-bottom: 0px !important;
+}
+::placeholder{
+  font: 14px poppins;
+  color: #808080;
+}
+a{
+  color: var(--blueK) !important;
+}
+a:hover{
+  color: var(--secondaryK) !important;
+  text-decoration: underline !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* adding fonts */
+@font-face {
+  font-family: "poppins";
+  src: url(assets/fonts/Poppins-Regular.ttf);
 }
+@font-face {
+  font-family: "poppinsSb";
+  src: url(assets/fonts/Poppins-SemiBold.ttf);
+}
+@font-face {
+  font-family: "poppinsB";
+  src: url(assets/fonts/Poppins-Bold.ttf);
+}
+@font-face {
+  font-family: "poppinsMd";
+  src: url(assets/fonts/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family: "mainF";
+  src: url(assets/fonts/BELLABOO-Regular.ttf);
+}
+@font-face {
+  font-family: "right";
+  src: url(assets/fonts/Righteous-Regular.ttf);
+}
+@font-face {
+  font-family: "million";
+  src: url(assets/fonts/Millions\ Journey\ Script\ Demo.ttf);
+}
+
+.form-control{
+  height: 50px;
+  border: none;
+  background-color: #F3F3F3;
+  border-radius: 5px;
+}
+
+textarea:hover, 
+textarea:active, 
+textarea:focus, 
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active
+{
+    outline:none !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+}
+
+textarea:hover, 
+textarea:active, 
+textarea:focus{
+  outline: 1px solid var(--blueK) !important;
+  -webkit-appearance:none !important;
+}
+input:hover,
+input:active,
+input:focus{
+outline: 1px solid var(--blueK);
+-webkit-appearance:none;
+}
+
+.form-control:focus {
+  border-color: var(--primaryK) !important;
+  box-shadow: 0 0 0 0.2rem var(--primaryK);
+} 
+
+.btn-primary{
+  background-color: var(--primaryK);
+  border-radius: 5px;
+  font: 24px right;
+  color: white;
+  border: none !important;
+  height: 50px;
+}
+.btn-primary:hover{
+  background-color: white;
+  border: 2px solid var(--primaryK) !important;
+  color: var(--primaryK);
+}
+
+.btn-secondary{
+  background-color: var(--secondaryK);
+  border-radius: 5px;
+  font: 24px right;
+  color: white;
+  border: none !important;
+  height: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.btn-secondary:hover{
+  background-color: white;
+  border: 2px solid var(--secondaryK) !important;
+  color: var(--secondaryK);
+}
+
+.btn-blue{
+  background-color: var(--blueK);
+  border-radius: 5px;
+  font: 24px right;
+  color: white;
+  border: none !important;
+  height: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.btn-blue:hover{
+  background-color: white;
+  border: 2px solid var(--blueK) !important;
+  color: var(--blueK);
+}
+
+.btn-golden{
+  background-color: #F5A343;
+  border-radius: 5px;
+  font: 24px right;
+  color: white;
+  border: none !important;
+  height: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.btn-golden:hover{
+  background-color: white;
+  border: 2px solid #F5A343 !important;
+  color: #F5A343;
+}
+
+.btn-chat{
+  background-color: var(--secondaryK);
+  border-radius: 0px 20px 0px 20px;
+  font: 12px poppinsMd;
+  color: white;
+  border: none !important;
+  height: 32px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: flex;
+  align-items: center;
+}
+.btn-chat:hover{
+  background-color: white;
+  border: 2px solid var(--secondaryK) !important;
+  color: var(--secondaryK);
+}
+
