--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -10,7 +10,7 @@
 }
 .profile img {
   height: 100%;
-  width: 100%;
+  width: 100%; 
   border-radius: 50%;
   object-fit: cover;
 }
@@ -18,16 +18,10 @@
 line-height: 0px !important;
 }
 
-.ant-input-search .ant-input-group .ant-input-affix-wrapper:not(:last-child) {
-    border-top-left-radius: 26px !important;
-    border-bottom-left-radius: 26px !important;
+.dashboard-head{
+  font: 24px right;
 }
 
-.ant-input-search>.ant-input-group>.ant-input-group-addon:last-child .ant-input-search-button {
-    padding-top: 0;
-    padding-bottom: 0;
-    border-radius: 0 20px 20px 0 !important;
-}
 
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
     background-color: #72d3d33d !important;
@@ -58,11 +52,69 @@ line-height: 0px !important;
 }
 
 .consultation-drop .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-  background-color: transparent;
-  border: none;
+  background-color: white !important;
+}
+
+.consultation-drop .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  padding-top: 0px !important;
 }
 
 
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  border: none;
+  text-align: left;
+  background-color: #F3F3F3 !important;
+  border-radius: 5px !important;
+  padding-top: 5px !important;
+}
+
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector {
+  height: 50px !important;
+}
+
+.d-welcome{
+  font: 18px poppins;
+  color: var(--primaryK);
+  font-weight: 700;
+}
+
+.consultations .table thead{
+  background:var(--primaryK);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+  border-radius: 10px !important;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+}
+.consultations .table thead th {
+  border-top: 0px;
+  border-bottom: 0px;
+}
+.consultations .table{
+  margin-bottom: 0px !important;
+  border-collapse: separate;
+  border-spacing:0 10px;
+}
+
+.consultations .table tbody tr{
+  background: #FFFFFF !important;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15) !important;
+  border-radius: 7px !important;
+  padding: 10px 15px !important;
+  margin-bottom: 20px !important;
+  text-align: center;
+}
 
 
+/* Reports */
 
+.add-card{
+  padding: 20px;
+  background-color: white;
+  border-radius: 20px;
+}
+.add-card input{
+  text-align: center;
+  height: 50px;
+}
